# The-Archive

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
content/: TheArchive.md
content/messages/: SooNicht.md  TheArchive.md  Updating.md
content/repo/: README.md
src/: main.rs
src/file_manager/: file_structure.rs  mod.rs  updater.rs
src/html_generator/: html_generator.rs  mod.rs
static/css/: styles.css
templates/: base.html.tera  dropdown.html.tera
