[package]
name = "the-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.19.0"
pulldown-cmark = "0.12.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"]}
tokio = "1.40.0"